fix linter again

--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -13,6 +13,8 @@ ignorePatterns:
   - '**/dist/.*'
   - '**/coverage/.*'
   - '*.json'
+  - '*.md'
+  - '.github/workflows/*.yml'
 
 parser: '@typescript-eslint/parser'
 
