--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -51,8 +51,7 @@ jobs:
       - name: Compare Expected and Actual Directories
         id: diff
         run: |
-          let diffOutput=`git diff --ignore-space-at-eol --text dist/ | wc -l`
-          if [ "$diffOutput" -gt "0" ]; then
+          if [ "$(git diff --ignore-space-at-eol --text dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build. See status below:"
             git diff --ignore-space-at-eol --text dist/
             exit 1
